--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
       <img
         src="images/header-image.png"
-        alt="картина "опять двойка"
+        alt="картина 'Опять двойка'"
         class="header__main-illustration"
       >
 
