внёс правки после ревью

--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Научиться учиться</title>
-  <link rel="stylesheet" href="styles/normalize.css">
-  <link rel="stylesheet" href="styles/style.css">
+  <meta name="description" content="Страница про разные подходы в обучении"> 
+
+  <meta name="robots" content="all"> 
+  <meta name="keywords" content="обучение, метод, подход, упражнение, научиться, уровень, навык, практикум, Фейнман"> 
+  <meta name="author" content="Олег Булатников, o.d.bulatnikov@yandex.ru"> 
+
+  <link rel="stylesheet" href="./styles/normalize.css">
+  <link rel="stylesheet" href="./styles/style.css">
 
 </head>
 <body>
@@ -23,7 +29,7 @@
       </p>
 
       <img
-        src="images/header-image.png"
+        src="./images/header-image.png"
         alt="картина 'Опять двойка'"
         class="header__main-illustration"
       >
@@ -115,7 +121,7 @@
         </a>
 
         <img
-          src="images/feynman.png"
+          src="./images/feynman.png"
           alt="Ричард Фейнман"
           class="feynman__main-illustration"
         >
@@ -189,14 +195,12 @@
           <a class="logo logo_place_footer"
             href="https://practicum.yandex.ru/web/"
             target="_blank">
-            <!-- профильный курс, ссылка на мой взгляд более чем логична -->
           </a>
 
           <a class="footer__author"
             href="https://github.com/alphajester/how-to-learn"
             target="_blank"
-            >&copy; 2022, Олег Булатников
-          <!-- ссылка не выделена цветом, для тех кто найдёт тут будет мой гит -->
+          >&copy; 2022, Олег Булатников
           </a>
         </div>
 
@@ -238,9 +242,11 @@
             
             <li>
               <a class="footer__column-link"
-                href="https://vk.com/yandex.praktikum"
+                href="https://vk.com/yandex.practicum"
                 target="_blank">
-                <div class="footer__social-icon footer__social-icon_of_vk"></div>
+                <img class="footer__social-icon"
+                  src="./images/vk_color_white.svg"
+                  alt=""></img>
                 ВКонтакте
               </a>
             </li>
@@ -249,16 +255,20 @@
               <a class="footer__column-link"
                 href="https://http.cat/400"
                 target="_blank">
-                <div class="footer__social-icon footer__social-icon_of_inst"></div>
+                <img class="footer__social-icon"
+                  src="./images/instagram_color_white.svg"
+                  alt=""></img>
                 Instagram
               </a>
             </li>
 
             <li>
               <a class="footer__column-link"
-                href="https://http.cat/403"
+                href=href="https://http.cat/403"
                 target="_blank">
-                <div class="footer__social-icon footer__social-icon_of_fb"></div>
+                <img class="footer__social-icon"
+                  src="./images/facebook_color_white.svg"
+                  alt=""></img>
                 Facebook
               </a>
             </li>
