--- a/index.html
+++ b/index.html
@@ -246,7 +246,8 @@
                 target="_blank">
                 <img class="footer__social-icon"
                   src="./images/vk_color_white.svg"
-                  alt=""></img>
+                  alt="">
+                </img>
                 ВКонтакте
               </a>
             </li>
@@ -257,7 +258,8 @@
                 target="_blank">
                 <img class="footer__social-icon"
                   src="./images/instagram_color_white.svg"
-                  alt=""></img>
+                  alt="">
+                </img>
                 Instagram
               </a>
             </li>
@@ -268,7 +270,8 @@
                 target="_blank">
                 <img class="footer__social-icon"
                   src="./images/facebook_color_white.svg"
-                  alt=""></img>
+                  alt="">
+                </img>
                 Facebook
               </a>
             </li>
