--- a/index.html
+++ b/index.html
@@ -246,9 +246,8 @@
                 target="_blank">
                 <img class="footer__social-icon"
                   src="./images/vk_color_white.svg"
-                  alt="">
-                </img>
-                ВКонтакте
+                  alt=""
+                >ВКонтакте
               </a>
             </li>
 
@@ -258,21 +257,19 @@
                 target="_blank">
                 <img class="footer__social-icon"
                   src="./images/instagram_color_white.svg"
-                  alt="">
-                </img>
-                Instagram
+                  alt=""
+                >Instagram
               </a>
             </li>
 
             <li>
               <a class="footer__column-link"
-                href=href="https://http.cat/403"
+                href="https://http.cat/403"
                 target="_blank">
                 <img class="footer__social-icon"
                   src="./images/facebook_color_white.svg"
-                  alt="">
-                </img>
-                Facebook
+                  alt=""
+                >Facebook
               </a>
             </li>
             
