готовая структура до чек-листа

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta name="keywords" content="обучение, метод, подход, упражнение, научиться, уровень, навык, практикум, Фейнман"> 
   <meta name="author" content="Олег Булатников, o.d.bulatnikov@yandex.ru"> 
 
-  <link rel="stylesheet" href="./styles/style.css">
+  <link rel="stylesheet" href="./pages/index.css">
 
 </head>
 <body>
@@ -24,7 +24,7 @@
 
       <p class="header__subtitle">
         Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
-        <a href="#start" class="header__link">Узнать</a>
+        <a href="#start" class="header__link arrow">Узнать</a>
       </p>
 
       <img
@@ -104,7 +104,6 @@
         <h2 class="section-title">Видео нa TED</h2>
         <p class="section-subtitle">Для тех, кто любит прокрастинировать.</p>
 
-        <!-- сделать позиционирование поверх oakley -->
         <div class="video__iframes">
           <iframe class="video__iframe" id="ytplayer" type="text/html" width="515" height="289.6875"
 src="https://www.youtube.com/embed/5MgBikgcWnY?cc_load_policy=1&controls=0&hl=ru&modestbranding=1&start=10&color=white"
@@ -135,7 +134,7 @@ frameborder="0" allowfullscreen></iframe>
         <h2 class="feynman__title">Метод Фейнмана</h2>
         <p class="feynman__subtitle">Выучить и не забыть.</p>
 
-        <a class="feynman__link"
+        <a class="feynman__link arrow"
           href="https://habr.com/ru/post/405517/"
           target="_blank"
           >Подробнее
@@ -212,7 +211,7 @@ frameborder="0" allowfullscreen></iframe>
           
           <div class="khan__book-container">
             <img src="./images/khan-book.jpg" alt="Весь мир — школа" class="khan__book-pic">
-            <a href="#" class="khan__buy-link">Купить книгу</a>
+            <a href="#" class="khan__buy-link arrow">Купить книгу</a>
           </div>
         </div>
       </section>
