--- a/index.html
+++ b/index.html
@@ -70,13 +70,13 @@
               alt="Два вида внимания"
             >
             <h3 class="cards__title">Два вида внимания</h3>
-            <p class="cards__description">Глубокие знания <br> возникают, если чередовать сфокусированное и рассеянное мышление</p>
+            <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление</p>
           </li>
 
           <li class="cards__item">
             <img class="cards__image"
               src="./images/cards-recall.png"
-              alt="Recall"
+              alt="Реколл"
             >
             <h3 class="cards__title">Recall</h3>
             <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти</p>
@@ -299,7 +299,7 @@ allowfullscreen></iframe>
             <img
               class="resources__logo"
               src="./images/logo/resources-n1.svg"
-              alt="'n+1'">
+              alt="'н+1'">
           </a>
 
           <a class="resources__link"
