more fixes via review

--- a/index.html
+++ b/index.html
@@ -106,15 +106,13 @@
         <p class="section-subtitle">Для тех, кто любит прокрастинировать.</p>
 
         <div class="video__iframes">
-          <iframe class="video__iframe" width="515" height="289" src="https://www.youtube.com/embed/5MgBikgcWnY?cc_load_policy=1&controls=0&hl=ru&modestbranding=1&start=10&color=white"
+          <iframe class="video__iframe" src="https://www.youtube.com/embed/5MgBikgcWnY?cc_load_policy=1&controls=0&hl=ru&modestbranding=1&start=10&color=white"
 allowfullscreen></iframe>
-          <iframe class="video__iframe" width="515" height="289" src="https://www.youtube.com/embed/arj7oStGLkU?cc_load_policy=1&controls=0&hl=ru&modestbranding=1&start=11&color=white"
+          <iframe class="video__iframe" src="https://www.youtube.com/embed/arj7oStGLkU?cc_load_policy=1&controls=0&hl=ru&modestbranding=1&start=11&color=white"
 allowfullscreen></iframe>
-        <!-- здесь есть тоненькая граница, зазор в 1px, надо убрать -->
         </div>
       </section>
 
-      <!-- сделать article -->
       <section class="oakley">
         <div class="two-columns">
           
