guess what? da fix it is

--- a/index.html
+++ b/index.html
@@ -144,7 +144,6 @@ allowfullscreen></iframe>
         >
       </section>
 
-      <!-- сделать article -->
       <section class="digits">
         <h2 class="section-title">Цифры и факты</h2>
         <p class="section-subtitle">Про учёбу и мозг</p>
@@ -208,7 +207,7 @@ allowfullscreen></iframe>
           
           <div class="khan__book-container">
             <img src="./images/khan-book.jpg" alt="Весь мир — школа" class="khan__book-pic">
-            <a href="#" class="khan__buy-link breathe arrow">Купить книгу</a>
+            <a href="https://www.ozon.ru/product/ves-mir-shkola-preobrazovannoe-obrazovanie-162999126/?sh=jedW7x9cdg" class="khan__buy-link breathe arrow">Купить книгу</a>
           </div>
         </div>
       </section>
